# torchscript

./: .gitignore  mnist.ipynb
data/: 8.txt
downloads/: README.md
example/: CMakeLists.txt  envsetup.sh  main.cpp
models/: mnist_dynamic_quantized_traced.pt
